--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
+    "@playwright/test": "^1.41.1",
     "@types/node": "^20.10.7"
+  },
+  "dependencies": {
+    "playwright": "^1.41.1"
   }
 }
